# workspace_pontapanta2025

./: .gitignore  README.md  build_debug.bash
.devcontainer/: devcontainer.json
src/Tool/Map/: lanelet_lr_center.csv  lanelet_lr_center_compact.csv  lanelet_waypoints.csv
src/Tool/Spline/: raceline_konada.csv  raceline_konada_edit_0.1m.csv  raceline_smoothed_0.1m.csv  spline.py
src/Tool/TrajectoryGenerator/: 20250802_1521_LogPoints.csv  20250802_1521_TimeSimulation.csv  20250802_1521_Trajectory.csv  20250802_1526_TimeSimulation.csv  20250802_1526_Trajectory.csv  20250802_1527_LogPoints.csv  20250802_1527_TimeSimulation.csv  20250802_1527_Trajectory.csv  20250802_2218_LogPoints.csv  20250802_2218_Trajectory.csv  20250802_2324_TimeSimulation.csv  20250828_0032_LogPoints.csv  20250828_0032_TimeSimulation.csv  20250828_0032_Trajectory.csv  20250828_0039_LogPoints.csv  20250828_0039_Trajectory.csv  20250828_0045_LogPoints.csv  20250828_0049_LogPoints.csv  20250828_0049_LogPoints_2.csv  20250828_0049_Trajectory.csv  20250828_0052_LogPoints.csv  20250828_0052_Trajectory.csv  20250828_0117_LogPoints.csv  20250829_0049_LogPoints.csv  20250829_0103_LogPoints.csv  20250829_0103_Trajectory.csv  20250829_0110_LogPoints.csv  20250829_0110_Trajectory.csv  20250829_0131_LogPoints.csv  20250829_0131_Trajectory.csv  20250829_0149_LogPoints.csv  20250829_0149_Trajectory.csv  20250829_0154_LogPoints.csv  20250829_0157_LogPoints.csv  20250829_0205_LogPoints.csv  20250829_0213_LogPoints.csv  TrajectoryGenerator_ver1.4.py  TrajectoryGenerator_ver1.5.py  TrajectoryGenerator_ver1.6.py  TrajectoryGenerator_ver1.7.py  (+2 more)
src/aichallenge_submit/: estimate_steering_dynamics.py  estimate_steering_from_bag-nonlinear.py  estimate_steering_from_bag.py
src/aichallenge_submit/aichallenge_submit_launch/launch/: for_rviz.launch.xml  reference.launch.xml  reference.launch_vehicle.xml  run_evaluation_wrapper.launch.py
src/aichallenge_submit/debug_msg/: CMakeLists.txt  package.xml
src/aichallenge_submit/debug_msg/layout/: plotLayout.xml
src/aichallenge_submit/trajectory_follower_nobuakif/: CMakeLists.txt  package.xml
src/aichallenge_submit/trajectory_follower_nobuakif/include/trajectory_follower_nobuakif/: trajectory_follower_nobuakif.hpp
src/aichallenge_submit/trajectory_follower_nobuakif/src/: trajectory_follower_nobuakif.cpp
(+20 files in other folders)
