<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_follower_nobuakif</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fukuti0105@yahoo.co.jp">fukuchi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>autoware_auto_control_msgs</depend>
  <depend>autoware_auto_planning_msgs</depend>
  <depend>autoware_auto_vehicle_msgs</depend>
  <depend>motion_utils</depend>
  <depend>std_msgs</depend>
  <depend>debug_msg</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
